<resources>

    <string name="app_name">Lorris mobile</string>
    <string name="lorris">Lorris</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sessions">Sessions</string>
    <string name="no_sessions">You have no sessions saved.</string>
    <string name="create_session">Create session</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="erase_session_title">Erase session?</string>
    <string name="erase_session_text">Session \"%1$s\" will be permanently deleted!</string>
    <string name="erase_session_toast">Session \"%1$s\" was deleted.</string>
    <string name="service">Session \"%1$s\" is opened.</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="saving_session">Saving session&#8230;</string>
    <string name="session_saved">Session \"%1$s\" was saved.</string>

    <string name="session_name">Session name</string>
    <string name="select_image">Select image file&#8230;</string>
    <string name="take_photo">Take a photo&#8230;</string>
    <string name="session_desc">Notes, description, &#8230;</string>
    <string name="save_session">Save session</string>
    <string name="new_session">New session</string>
    <string name="edit_session">Edit session</string>
    <string name="session_image_desc">Image or photo associated with this session.</string>
    <string name="no_pick_handler">No application on this phone can select files. This option is unavailable.</string>
    <string name="name_taken">This name is already taken!</string>
    <string name="name_empty">Session name must not be empty.</string>
    <string name="session_create_failed">Failed to create new session!</string>

    <string name="opened_tabs">Opened tabs:</string>
    <string name="tab_btn_desc">Show tab list</string>
    <string name="back_twice">Press BACK once again to close current session</string>
    <string name="close_tab">Close tab</string>
    <string name="no_connection">no connection</string>
    <string name="connected_to">connected to \"%1$s\"</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="load_session">Load session</string>

    <string name="toggle_keyboard">Toggle keyboard</string>
    <string name="clear">Clear</string>
    <string name="term_settings">Terminal settings</string>
    <string name="toggle_hex">Toggle hex mode</string>
    <string name="font_size">Font size:</string>
    <string name="colors">Colors:</string>
    <string name="enter_key_press">On return key:</string>
    <string name="hex_bpl">Hex bytes/line</string>
    <string name="b8">8 B</string>
    <string name="b16">16 B</string>
    <string name="apply">Apply</string>
    <string name="term_loading">Loading terminal data, please wait&#8230;</string>
    <string name="clear_on_hex">Clear data when\ntoggling hex mode:</string>
    <string name="terminal_loading">Can\'t clear terminal during data load.</string>
    <string name="enable">Enable</string>

    <string name="browse">Browse&#8230;</string>
    <string name="type">Type:</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="flash">Flash</string>
    <string name="hex_file">Hex file</string>
    <string name="no_hex">No hex file loaded.</string>
    <string name="chip_info">Chip info</string>
    <string name="no_chip">Chip was not yet identified.</string>
    <string name="prog_size">&lt;b>Program size:&lt;/b> %1$s</string>
    <string name="last_mod">&lt;b>Last modified:&lt;/b> %1$s</string>
    <string name="invalid_hex">HEX file is invalid!\n%1$s</string>
    <string name="chip_sign">&lt;b>Signature:&lt;/b> %1$s</string>
    <string name="flash_mem">&lt;b>Flash memory:&lt;/b> %1$s</string>
    <string name="eeprom">&lt;b>EEPROM:&lt;/b> %1$s</string>
    <string name="page_size">&lt;b>Page size:&lt;/b> %1$s</string>
    <string name="used_mem">&lt;b>Memory used by HEX file:&lt;/b> %1$d of %2$d bytes (%3$d%%)</string>
    <string name="unknown_chip">&lt;Unknown></string>
    <string name="switch_failed">Failed to switch mode!</string>
    <string name="select_hex">Select HEX file</string>
    <string name="shupito_tunnel">Shupito tunnel</string>
    <string name="speed">Speed:</string>
    <string name="prog_type">Programmer type</string>
    <string name="avr109_settings">AVR109 settings</string>
    <string name="bootseq">Sequence to enter bootloader:</string>

    <string name="new_tab">New tab</string>
    <string name="open_new_tab">Open new tab:</string>
    <string name="analyzer">Analyzer</string>
    <string name="terminal">Terminal</string>
    <string name="programmer">Programmer</string>
    <string name="connection">Connection</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connecting">Connecting</string>
    <string name="set_connection">Set connection</string>
    <string name="connections">Connections</string>

    <string name="paired_devices">Paired devices</string>
    <string name="new_devices">New devices</string>
    <string name="find_devices">Find new devices</string>
    <string name="bt_not_enabled">Bluetooth is not enabled.</string>
    <string name="enable_bt">Enable</string>
    <string name="no_bt_adapter">This device does not have bluetooth capabilities.</string>

    <string name="saved_connections">Saved connections</string>
    <string name="add_tcp_conn">Add TCP connection</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="port">Port</string>
    <string name="all_fields">You have to fill in all fields!</string>
    <string name="invalid_port">Invalid port number!</string>
    <string name="erase_tcp_conn_title">Erase TCP connection?</string>
    <string name="erase_tcp_conn_text">TCP connection \"%1$s\" will be permanently deleted!</string>

    <string name="connected_devices">Connected devices</string>

    <string name="yunicontrol">YuniControl</string>
    <string name="select_board">Select board</string>
    <string name="cur_voltage">Current voltage: </string>
    <string name="pot">POT</string>
    <string name="info">INFO</string>
    <string name="settings">SETTINGS</string>
    <string name="timeout_info">Couldn\'t get device info!</string>
    <string name="try_again">Try again</string>
    <string name="board">Board</string>
    <string name="data_request">Data request</string>
    <string name="period">Period (ms)</string>
    <string name="request_mask">Request mask</string>
    <string name="joystick_calibration">Joystick calibration</string>
    <string name="start_calibration">Start calibration</string>
    <string name="no_data">No data available, please connect to YuniControl device.</string>
    <string name="voltage">%1$.1f V</string>
    <string name="get_cal_info">Getting calibration info</string>
    <string name="cal_failed">ERROR: Calibration failed, please try again!</string>
    <string name="no_cal_dev">No device to calibrate!</string>
    <string name="calibrate">Please move all joystick axes through maximum and minimum positions, leave the joystick in default position and press "OK".</string>
    <string name="joystick">Joystick</string>

    <string name="button_type">Button type</string>
    <string name="press_buttons">Press buttons</string>
    <string name="max_val">Maximum value:</string>
    <string name="lock_axis3">Lock</string>
    <string name="protocol_avakar">Avakar\'s</string>
    <string name="protocol_lego">Lego</string>
    <string name="protocol_chessbot">Chessbot</string>
    <string name="protocol">Protocol</string>
    <string name="device_id">Device ID:</string>
    <string name="invert_left_right">Invert left/right</string>
    <string name="invert_forward_backward">Invert forward/backward</string>
    <string name="swap_axes">Swap axes</string>
    <string name="extra_axes">Extra axes:</string>

    <string-array name="session_options">
        <item>Edit</item>
        <item>Erase</item>
    </string-array>

    <string-array name="tab_names">
        <item>Terminal</item>
        <item>Programmer</item>
        <item>YuniControl</item>
        <item>Joystick</item>
    </string-array>

    <string-array name="term_colors">
        <item>Black+white text</item>
        <item>White+black text</item>
        <item>Blue+white text</item>
        <item>Black+green text</item>
    </string-array>

    <string-array name="enter_key_press">
        <item>Send \\r\\n</item>
        <item>Send \\n</item>
        <item>Send \\r</item>
        <item>Send \\n\\r</item>
    </string-array>

    <string-array name="programmer_types">
        <item>avr232boot</item>
        <item>avr109</item>
    </string-array>

    <string-array name="tunnel_speeds">
        <item>4800</item>
        <item>9600</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>500000</item>
    </string-array>
</resources>
