<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
    <Button android:id="@+id/protocol"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/act_bar_height"
        android:background="@drawable/transparent_btn"
        android:textColor="#CCFFFFFF"
        android:padding="8dp"
        android:contentDescription="@string/protocol"
        android:text="@string/protocol" />
    <Button android:id="@+id/btn_type"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/act_bar_height"
        android:background="@drawable/transparent_btn"
        android:textColor="#CCFFFFFF"
        android:padding="8dp"
        android:contentDescription="@string/button_type"
        android:text="@string/press_buttons" />
    <ImageButton android:id="@+id/lock_axis3" 
        android:layout_width="@dimen/act_bar_height"
        android:layout_height="@dimen/act_bar_height"
        android:layout_marginLeft="1dp"
        android:background="@drawable/transparent_btn"
        android:src="@drawable/device_access_secure"
        android:contentDescription="@string/lock_axis3" />
</LinearLayout>
