<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:padding="10dp">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
        <TableLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow >
                <TextView android:id="@+id/font_size_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:gravity="right"
                    android:text="@string/font_size" />
                <EditText android:id="@+id/font_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>
            </TableRow>
            <TableRow>
                <TextView android:id="@+id/colors_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="17sp"
                    android:text="@string/colors"/>
                <Spinner android:id="@+id/colors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/term_colors"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:textSize="17sp"
                    android:text="@string/enter_key_press"/>
                <Spinner android:id="@+id/enter_key_press"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/enter_key_press"/>
            </TableRow>
            <TableRow
                android:baselineAligned="false">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:textSize="17sp"
                    android:padding="8dp"
                    android:text="@string/clear_on_hex"/>
                <CheckBox android:id="@+id/clear_on_hex"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/enable"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right|center"
                    android:textSize="17sp"
                    android:padding="8dp"
                    android:text="@string/hex_bpl"/>
                <RadioGroup android:id="@+id/hex_bytes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton android:id="@+id/hex8bytes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/b8"/>
                    <RadioButton android:id="@+id/hex16bytes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/b16"/>
                </RadioGroup>
            </TableRow>
            <TableRow android:gravity="center">
                <Button android:id="@+id/save_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply" />
            </TableRow>
        </TableLayout>
        <View android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>
</ScrollView>