<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="15dp"
    android:padding="10dp">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textColor="#0099CC"
            android:text="@string/data_request"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>
        <include layout="@layout/yc_settings_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="5dp"
        android:background="#0099CC"/>

     <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@drawable/light_gray_text"
        android:text="@string/period"/>
    <EditText android:id="@+id/get_data_period"
        android:minWidth="50dp"
        android:minEms="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@drawable/light_gray_text"
        android:text="@string/request_mask"/>
    <EditText android:id="@+id/get_data_mask"
        android:minWidth="50dp"
        android:minEms="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
</LinearLayout>
