<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <ImageView android:id="@+id/session_image"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:src="@drawable/photo_ph"
            android:contentDescription="@string/session_image_desc"/>
        <TextView android:id="@+id/session_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView android:id="@+id/session_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <View android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/opened_tabs" />

    <HorizontalScrollView android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <include layout="@layout/opened_tab_item" />
            <include layout="@layout/opened_tab_item" />
            <include layout="@layout/opened_tab_item" />
            <include layout="@layout/opened_tab_item" />
            <include layout="@layout/opened_tab_item" />
            <include layout="@layout/opened_tab_item" />
            <include layout="@layout/opened_tab_item" />
            <include layout="@layout/opened_tab_item" />
        </LinearLayout>
    </HorizontalScrollView>
    
    <View android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button android:id="@+id/load_session" 
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/load_session"
        android:layout_marginBottom="20dp"/>

</LinearLayout>